// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status render not state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#EEEFF1",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type dot blue 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#2B78EE",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot gray 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#B6BBC6",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot green 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#4ABA79",
      },
      {
        "flex": 1,
      },
    ]
  }
/>
`;

exports[`Status render type dot orange 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#FAB742",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type dot red 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "height": 8,
        "width": 8,
      },
      {
        "backgroundColor": "#F54D3D",
      },
      undefined,
    ]
  }
/>
`;

exports[`Status render type tag blue 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(43, 120, 238, 0.15)",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#2B78EE",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag gray 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "#EEEFF1",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#5E6678",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag green 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(74, 186, 121, 0.15)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#29A35C",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag orange 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(250, 183, 66, 0.15)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#F97A1F",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`Status render type tag red 1`] = `
<View
  style={
    [
      {
        "borderRadius": 4,
        "paddingHorizontal": 6,
        "paddingVertical": 2,
      },
      {
        "backgroundColor": "rgba(245, 77, 61, 0.15)",
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      [
        {
          "color": "#F54D3D",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "lineHeight": 16,
          "minHeight": 16,
        },
        undefined,
      ]
    }
  >
    text
  </Text>
</View>
`;
